--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container-fluid">
       <div class="container my-3">
         <div class="row">
-          <div class="col-3">
+          <div class="col-lg-3 col-6">
             <h6 class="text-white">Your previous results</h6>
             <ol class="list-group list-group-numbered">
               <li
@@ -44,16 +44,16 @@
               </li>
             </ol>
           </div>
-          <div class="col-9">
+          <div class="col-lg-9 col-6">
             <h6 class="text-white text-center">Start new Game</h6>
             <div class="ms-5 mt-3" style="display: none" id="errCategories">
               <div class="alert alert-danger" role="alert">
                 There is a problem with connection. Please try later
               </div>
             </div>
-            <div class="ms-5 mt-3">
+            <div class="ms-lg-5 mt-3">
               <form action="" class="form" id="form">
-                <div class="form-floating mb-3 col-12">
+                <div class="form-floating mb-3 col-lg-12 col-9">
                   <select
                     class="form-select"
                     id="number"
@@ -67,7 +67,7 @@
                   </select>
                   <label for="floatingSelect">Number of questions</label>
                 </div>
-                <div class="form-floating mb-3 col-12">
+                <div class="form-floating mb-3 col-lg-12 col-9">
                   <select
                     class="form-select"
                     id="category"
@@ -78,7 +78,7 @@
                   </select>
                   <label for="floatingSelect">Category</label>
                 </div>
-                <div class="form-floating">
+                <div class="form-floating mb-3 col-lg-12 col-9">
                   <select
                     class="form-select"
                     id="difficulty"
