--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </select>
                   <label for="floatingSelect">Difficulty</label>
                 </div>
-                <button class="btn btn-success my-2">Start</button>
+                <button class="btn btn-success my-2" id="start">Start</button>
               </form>
             </div>
           </div>
