--- a/index.html
+++ b/index.html
@@ -114,6 +114,34 @@
         </div>
       </div>
     </div>
+
+    <!-- questions -->
+    <div class="container-fluid" id="questions" style="display: none">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center text-white">
+            <p id="question">Text....</p>
+          </div>
+          <div class="col-6 my-3 mx-auto">
+            <button class="col-12 mt-2 btn-light" id="a1">
+              <span id="answer1"></span>
+            </button>
+            <span id="answer1"></span>
+            <button class="col-12 mt-2 btn-light" id="a2">
+              <span id="answer2"></span>
+            </button>
+            <span id="answer2"></span>
+            <button class="col-12 mt-2 btn-light" id="a3">
+              <span id="answer3"></span>
+            </button>
+
+            <button class="col-12 mt-2 btn-light" id="a4">
+              <span id="answer4"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
