--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       <div class="container">
         <div class="row my-5 bg-primary">
           <div class="text-center">
-            <h1 class="text-white" id="welcome">
-              Welcome to the Trivia Quiz Game
-            </h1>
+            <h1 class="text-white" id="welcome">Welcome to Trivia Quiz Game</h1>
             <div
               class="d-flex align-items-center"
               id="loader"
@@ -45,18 +43,7 @@
       <div class="container my-3">
         <div class="row">
           <div class="col-lg-3 col-6">
-            <h6 class="text-white">Your previous results</h6>
-            <ol class="list-group list-group-numbered">
-              <li
-                class="list-group-item d-flex justify-content-between align-items-start"
-              >
-                <div class="ms-2 me-auto">
-                  <div class="fw-bold">Subheading</div>
-                  Content for list item
-                </div>
-                <span class="badge bg-primary rounded-pill">14</span>
-              </li>
-            </ol>
+            <h6 class="text-white" id="history">Your previous results</h6>
           </div>
           <div class="col-lg-9 col-6">
             <h6 class="text-white text-center">Start new Game</h6>
