--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid" id="tryAgain" style="display: none">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <button class="btn btn-warning" id="reload">Try Again</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
