--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
         <div class="row my-5 bg-primary">
           <div class="text-center">
             <h1 class="text-white" id="welcome">Welcome to Trivia Quiz Game</h1>
-            <div
-              class="d-flex align-items-center"
-              id="loader"
-              style="display: none !important"
-            >
-              <strong class="text-white">Loading Questions...</strong>
-              <div
-                class="spinner-border ms-auto text-white"
-                role="status"
-                aria-hidden="true"
-              ></div>
+            <div id="loader">
+              <!-- <div
+                class="d-flex align-items-center"
+                style="display: none !important"
+              >
+                <strong class="text-white">Loading Questions...</strong>
+                <div
+                  class="spinner-border ms-auto text-white"
+                  role="status"
+                  aria-hidden="true"
+                ></div>
+              </div> -->
             </div>
           </div>
         </div>
